SF Bug#:	704190 (partial)
Switch over to using the platform-independent DSO naming scheme offered by
vpr::LibraryLoader::findAndInitDSO() for the device driver plug-ins.  This
allows us to configure the Input Manager in a more cross-platform manner,
and it addresses the debug/release ABI incompatibility on Windows.

If this works out, I would like to see the other plug-in loading pieces
following this model.  The build may need to have some kinks worked out,
especially on Windows where this has not yet been tested.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13576 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/Makefile.in
+++ b/juggler/modules/gadgeteer/Makefile.in
@@ -240,6 +240,7 @@ endif
           $(EXTRA_INSTALL_ARGS) $(GADGETROOT_ABS)/RELEASE_NOTES.txt	\
           $(projdatadir)
 	@$(MAKE) BUILD_TYPE=opt afterinstall
+	@$(MAKE) BUILD_TYPE=dbg afterinstall
 	@echo "Build time: `LTIME=C date`" > $(projdatadir)/BUILD_TIME
 	@echo "==============================================================="
 	@echo ">>> Gadgeteer make release started on $(STARTTIME)"
