Don't build the Java extensions if Java isn't available.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13584 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/configure.in
+++ b/juggler/modules/tweek/configure.in
@@ -803,7 +803,7 @@ esac
 
 # Check if we want to build the Tweek extensions
 BUILD_EXTENSIONS='N'
-if test "x$use_tweek_extensions" != "xno" ; then
+if test "x$use_tweek_extensions" != "xno" -a "x$BUILD_JAVA" = "xY" ; then
    BUILD_EXTENSIONS='Y'
 fi
 
