Don't use @BUILD_XXX@ when a make variable is available.  This means that there is less to modify in a generated makefile if something needs to be disabled.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13585 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/Makefile.in
+++ b/juggler/modules/tweek/Makefile.in
@@ -113,6 +113,11 @@ include @topdir@/make.defs.mk
 
 STARTTIME:=	$(shell LC_TIME=C date)
 
+BUILD_CXX=		@BUILD_CXX@
+BUILD_JAVA=		@BUILD_JAVA@
+BUILD_PYTHON=		@BUILD_PYTHON@
+BUILD_EXTENSIONS=	@BUILD_EXTENSIONS@
+
 BUILD_PROF_C=	@BUILD_PROF_C@
 BUILD_PROF_CXX=	@BUILD_PROF_CXX@
 
@@ -131,17 +136,17 @@ endif
 # Subdirectories used for recursion through the source tree.
 SUBDIR=		
 
-ifeq (@BUILD_CXX@, Y)
+ifeq ($(BUILD_CXX), Y)
    SUBDIR+=	tweek
 endif
 
-ifeq (@BUILD_JAVA@, Y)
+ifeq ($(BUILD_JAVA), Y)
    SUBDIR+=	java
 endif
 
-# Only build extensions if requested
-ifeq (@BUILD_EXTENSIONS@, Y)
-   SUBDIR+= extensions
+# Only build extensions if requested.
+ifeq ($(BUILD_EXTENSIONS), Y)
+   SUBDIR+=	extensions
 endif
 
 # =============================================================================
