--- a/modules/vrjuggler/samples/OSG/simple/osgNav/osgNav.vcproj
+++ b/modules/vrjuggler/samples/OSG/simple/osgNav/osgNav.vcproj
@@ -20,8 +20,9 @@
 			ATLMinimizesCRunTimeLibraryUsage="FALSE">
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="-Zm400 -I. -I&quot;$(OSGHOME)/include&quot; -I&quot;$(VJ_BASE_DIR)/include&quot; -I&quot;$(NSPR_ROOT)/include/nspr&quot;"
+				AdditionalOptions="-Zm400"
 				Optimization="0"
+				AdditionalIncludeDirectories=".;&quot;$(VJ_BASE_DIR)/include&quot;;&quot;$(OSGHOME)/include&quot;;&quot;$(NSPR_ROOT)/include/nspr&quot;"
 				PreprocessorDefinitions="WIN32,_WINDOWS,WINVER=0x0400,_WIN32_WINDOWS=0x0410,_WIN32_WINNT=0x0400,_DEBUG,FL_DLL"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -34,7 +35,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Juggler.lib Juggler_ogl.lib gadget.lib jccl.lib vpr.lib libnspr4.lib libplc4.lib MSVCPRTD.lib MSVCRTD.lib winmm.lib wsock32.lib osgd.lib osgUtild.lib osgDBd.lib opengl32.lib"
+				AdditionalDependencies="vrj.lib vrj_ogl.lib gadget.lib jccl.lib vpr.lib libnspr4.lib libplc4.lib MSVCPRTD.lib MSVCRTD.lib winmm.lib wsock32.lib osgd.lib osgUtild.lib osgDBd.lib opengl32.lib"
 				OutputFile=".\Debug/osgNav.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="$(OSGHOME)/lib;$(VJ_BASE_DIR)/lib/debug;$(NSPR_ROOT)/lib"
@@ -68,8 +69,9 @@
 			ATLMinimizesCRunTimeLibraryUsage="FALSE">
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="-Zm1200 -I&quot;$(OSGHOME)/include&quot; -I&quot;$(VJ_BASE_DIR)/include&quot; -I&quot;$(NSPR_ROOT)/include/nspr&quot;"
+				AdditionalOptions="-Zm1200"
 				InlineFunctionExpansion="1"
+				AdditionalIncludeDirectories=".;&quot;$(VJ_BASE_DIR)/include&quot;;&quot;$(OSGHOME)/include&quot;;&quot;$(NSPR_ROOT)/include/nspr&quot;"
 				PreprocessorDefinitions="WIN32,_WINDOWS,WINVER=0x0400,_WIN32_WINDOWS=0x0410,_WIN32_WINNT=0x0400,_OPT,FL_DLL"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
