--- a/juggler/modules/vrjuggler/samples/OSG/simple/osgNav/osgNav.vcproj
+++ b/juggler/modules/vrjuggler/samples/OSG/simple/osgNav/osgNav.vcproj
@@ -20,8 +20,9 @@
 			ATLMinimizesCRunTimeLibraryUsage="FALSE">
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="-Zm400 -I. -I&quot;$(OSGHOME)/include&quot; -I&quot;$(VJ_BASE_DIR)/include&quot; -I&quot;$(NSPR_ROOT)/include/nspr&quot;"
+				AdditionalOptions="-Zm400"
 				Optimization="0"
+				AdditionalIncludeDirectories=".;&quot;$(VJ_BASE_DIR)/include&quot;;&quot;$(OSGHOME)/include&quot;;&quot;$(NSPR_ROOT)/include/nspr&quot;"
 				PreprocessorDefinitions="WIN32,_WINDOWS,WINVER=0x0400,_WIN32_WINDOWS=0x0410,_WIN32_WINNT=0x0400,_DEBUG,FL_DLL"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -34,7 +35,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Juggler.lib Juggler_ogl.lib gadget.lib jccl.lib vpr.lib libnspr4.lib libplc4.lib MSVCPRTD.lib MSVCRTD.lib winmm.lib wsock32.lib osgd.lib osgGLUTd.lib osgUtild.lib osgDBd.lib opengl32.lib"
+				AdditionalDependencies="Juggler.lib Juggler_ogl.lib gadget.lib jccl.lib vpr.lib libnspr4.lib libplc4.lib MSVCPRTD.lib MSVCRTD.lib winmm.lib wsock32.lib osgd.lib osgUtild.lib osgDBd.lib opengl32.lib"
 				OutputFile=".\Debug/osgNav.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="$(OSGHOME)/lib;$(VJ_BASE_DIR)/lib/debug;$(NSPR_ROOT)/lib"
@@ -68,8 +69,9 @@
 			ATLMinimizesCRunTimeLibraryUsage="FALSE">
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="-Zm1200 -I&quot;$(OSGHOME)/include&quot; -I&quot;$(VJ_BASE_DIR)/include&quot; -I&quot;$(NSPR_ROOT)/include/nspr&quot;"
+				AdditionalOptions="-Zm1200"
 				InlineFunctionExpansion="1"
+				AdditionalIncludeDirectories=".;&quot;$(VJ_BASE_DIR)/include&quot;;&quot;$(OSGHOME)/include&quot;;&quot;$(NSPR_ROOT)/include/nspr&quot;"
 				PreprocessorDefinitions="WIN32,_WINDOWS,WINVER=0x0400,_WIN32_WINDOWS=0x0410,_WIN32_WINNT=0x0400,_OPT,FL_DLL"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
@@ -82,7 +84,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Juggler.lib Juggler_ogl.lib gadget.lib jccl.lib vpr.lib libnspr4.lib libplc4.lib MSVCPRTD.lib MSVCRTD.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib wsock32.lib osg.lib osgGLUT.lib osgUtil.lib osgDB.lib glut32.lib opengl32.lib"
+				AdditionalDependencies="Juggler.lib Juggler_ogl.lib gadget.lib jccl.lib vpr.lib libnspr4.lib libplc4.lib MSVCPRTD.lib MSVCRTD.lib kernel32.lib user32.lib gdi32.lib uuid.lib wsock32.lib osg.lib osgUtil.lib osgDB.lib glut32.lib opengl32.lib"
 				OutputFile=".\Release/osgNav.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="$(OSGHOME)/lib,$(VJ_BASE_DIR)/lib/opt,$(NSPR_ROOT)/lib"
