--- a/modules/vrjuggler/vrjconfig/customeditors/Makefile.in
+++ b/modules/vrjuggler/vrjconfig/customeditors/Makefile.in
@@ -42,17 +42,23 @@ include @topdir@/make.defs.mk
 # Prefix for recursive stuff.
 DIRPRFX=	vrjconfig/customeditors/
 
-BUILD_JAVA=   @BUILD_JAVA@
-BUILD_JAVA3D_EDITOR=   @BUILD_JAVA_3D_EDITOR@
+BUILD_JAVA=		@BUILD_JAVA@
+BUILD_PROXY_EDITOR=	@BUILD_PROXY_EDITOR@
+BUILD_JAVA3D_EDITOR=	@BUILD_JAVA_3D_EDITOR@
 
 # Subdirectories used for recursion through the source tree.
-SUBDIR=	proxyeditor \
-	#displaywindoweditor 
+SUBDIR= #displaywindoweditor 
+
+ifeq ($(BUILD_JAVA), Y)
+   ifeq ($(BUILD_PROXY_EDITOR), Y)
+      SUBDIR+=	proxyeditor
+   endif
+endif
 
 # Subdirectories to compile.
 ifeq ($(BUILD_JAVA), Y)
    ifeq ($(BUILD_JAVA3D_EDITOR), Y)
-      SUBDIR += surfacedisplayeditor
+      SUBDIR+=	surfacedisplayeditor
    endif
 endif
 
