--- a/juggler/juggler.cfg
+++ b/juggler/juggler.cfg
@@ -36,9 +36,16 @@ Gadgeteer
    modules/gadgeteer: GADGETEER_CONFIG=gadgeteer-config, GADGET_BASE_DIR=instlinks;
 }
 
+GadgeteerDrivers
+{
+   depend Gadgeteer;
+   modules/gadgeteer/drivers;
+}
+
 VRJuggler
 {
    depend Sonix;
    depend Gadgeteer;
+   depend GadgeteerDrivers;
    modules/vrjuggler: VRJ_CONFIG=vrjuggler-config, VJ_BASE_DIR=instlinks;
 }
