Forgot to commit another file, I need sleep.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk/juggler@13615 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler.cfg
+++ b/juggler.cfg
@@ -36,9 +36,16 @@ Gadgeteer
    modules/gadgeteer: GADGETEER_CONFIG=gadgeteer-config, GADGET_BASE_DIR=instlinks;
 }
 
+GadgeteerDrivers
+{
+   depend Gadgeteer;
+   modules/gadgeteer/drivers;
+}
+
 VRJuggler
 {
    depend Sonix;
    depend Gadgeteer;
+   depend GadgeteerDrivers;
    modules/vrjuggler: VRJ_CONFIG=vrjuggler-config, VJ_BASE_DIR=instlinks;
 }
